fix unneeded scrollbars

--- a/layouts/header/style.css
+++ b/layouts/header/style.css
@@ -123,7 +123,7 @@ input, textarea {
     padding: 13px 15px;
     top: 8px;
     position: relative;
-    border-bottom: 3px solid var(--background-color);
+    border-bottom: 3px solid transparent;
     transition: 0.1s;
 }
 
